// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render App 1`] = `
<RCTScrollView
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#FFFFF5",
        "padding": 16,
      },
    ]
  }
>
  <View>
    <Text
      style={
        [
          {
            "fontSize": 40,
            "fontWeight": "700",
            "lineHeight": 40,
            "textAlign": "center",
          },
          {
            "color": "#2563EB",
            "paddingBottom": 24,
          },
        ]
      }
    >
      This is a Heading 1
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 12,
        }
      }
    >
      <Text
        style={
          [
            {
              "fontSize": 18,
              "lineHeight": 24,
            },
            {
              "color": "#111827",
              "paddingBottom": 10,
            },
          ]
        }
      >
        ☀️ Light
      </Text>
      <View
        accessibilityHint="Switch to dark theme"
        accessibilityLabel="Light mode, toggle to switch"
        accessibilityRole="switch"
        accessibilityState={
          {
            "busy": false,
            "checked": false,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": "Off",
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "justifyContent": "center",
            "opacity": 1,
            "paddingBottom": 10,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "#F59E0B",
              "borderRadius": 12,
              "height": 24,
              "justifyContent": "center",
              "opacity": 1,
              "paddingHorizontal": 2,
              "width": 40,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "backgroundColor": "#F0F0F0",
                "borderRadius": 10,
                "elevation": 5,
                "height": 20,
                "shadowColor": "#000",
                "shadowOffset": {
                  "height": 2,
                  "width": 0,
                },
                "shadowOpacity": 0.25,
                "shadowRadius": 3.84,
                "transform": [
                  {
                    "translateX": 1,
                  },
                ],
                "width": 20,
              }
            }
          />
        </View>
      </View>
      <Text
        style={
          [
            {
              "fontSize": 18,
              "lineHeight": 24,
            },
            {
              "color": "#111827",
              "paddingBottom": 10,
            },
          ]
        }
      >
        🌙 Dark
      </Text>
    </View>
    <Text
      style={
        [
          {
            "fontSize": 30,
            "fontWeight": "600",
            "lineHeight": 30,
            "textAlign": "left",
          },
          {
            "color": "#2563EB",
            "paddingBottom": 24,
          },
        ]
      }
    >
      This is a Heading 2
    </Text>
    <Text
      style={
        [
          {
            "fontSize": 28,
            "fontWeight": "500",
            "lineHeight": 28,
            "textAlign": "left",
          },
          {
            "color": "#2563EB",
            "paddingBottom": 24,
          },
        ]
      }
    >
      This is a Heading 3
    </Text>
    <Text
      style={
        [
          {
            "fontSize": 26,
            "fontWeight": "400",
            "lineHeight": 26,
            "textAlign": "left",
          },
          {
            "color": "#2563EB",
            "paddingBottom": 24,
          },
        ]
      }
    >
      This is a Heading 4
    </Text>
    <Text
      style={
        [
          {
            "fontSize": 24,
            "fontWeight": "300",
            "lineHeight": 24,
            "textAlign": "left",
          },
          {
            "color": "#2563EB",
            "paddingBottom": 24,
          },
        ]
      }
    >
      This is a Heading 5
    </Text>
    <Text
      style={
        [
          {
            "fontSize": 20,
            "fontWeight": "200",
            "lineHeight": 20,
            "textAlign": "left",
          },
          {
            "color": "#2563EB",
            "paddingBottom": 24,
          },
        ]
      }
    >
      This is a Heading 6
    </Text>
    <Text
      style={
        [
          {
            "fontSize": 18,
            "lineHeight": 24,
          },
          {
            "color": "#111827",
            "paddingBottom": 10,
          },
        ]
      }
    >
      This is body text
    </Text>
  </View>
</RCTScrollView>
`;

exports[`should render after toggling theme 1`] = `
<RCTScrollView
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#111827",
        "padding": 16,
      },
    ]
  }
>
  <View>
    <Text
      style={
        [
          {
            "fontSize": 40,
            "fontWeight": "700",
            "lineHeight": 40,
            "textAlign": "center",
          },
          {
            "color": "#60A5FA",
            "paddingBottom": 24,
          },
        ]
      }
    >
      This is a Heading 1
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 12,
        }
      }
    >
      <Text
        style={
          [
            {
              "fontSize": 18,
              "lineHeight": 24,
            },
            {
              "color": "#E8E2D9",
              "paddingBottom": 10,
            },
          ]
        }
      >
        ☀️ Light
      </Text>
      <View
        accessibilityHint="Switch to light theme"
        accessibilityLabel="Dark mode, toggle to switch"
        accessibilityRole="switch"
        accessibilityState={
          {
            "busy": false,
            "checked": true,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": "On",
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "justifyContent": "center",
            "opacity": 1,
            "paddingBottom": 10,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "#34D399",
              "borderRadius": 12,
              "height": 24,
              "justifyContent": "center",
              "opacity": 1,
              "paddingHorizontal": 2,
              "width": 40,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "backgroundColor": "#474126",
                "borderRadius": 10,
                "elevation": 5,
                "height": 20,
                "shadowColor": "#000",
                "shadowOffset": {
                  "height": 2,
                  "width": 0,
                },
                "shadowOpacity": 0.25,
                "shadowRadius": 3.84,
                "transform": [
                  {
                    "translateX": 1,
                  },
                ],
                "width": 20,
              }
            }
          />
        </View>
      </View>
      <Text
        style={
          [
            {
              "fontSize": 18,
              "lineHeight": 24,
            },
            {
              "color": "#E8E2D9",
              "paddingBottom": 10,
            },
          ]
        }
      >
        🌙 Dark
      </Text>
    </View>
    <Text
      style={
        [
          {
            "fontSize": 30,
            "fontWeight": "600",
            "lineHeight": 30,
            "textAlign": "left",
          },
          {
            "color": "#60A5FA",
            "paddingBottom": 24,
          },
        ]
      }
    >
      This is a Heading 2
    </Text>
    <Text
      style={
        [
          {
            "fontSize": 28,
            "fontWeight": "500",
            "lineHeight": 28,
            "textAlign": "left",
          },
          {
            "color": "#60A5FA",
            "paddingBottom": 24,
          },
        ]
      }
    >
      This is a Heading 3
    </Text>
    <Text
      style={
        [
          {
            "fontSize": 26,
            "fontWeight": "400",
            "lineHeight": 26,
            "textAlign": "left",
          },
          {
            "color": "#60A5FA",
            "paddingBottom": 24,
          },
        ]
      }
    >
      This is a Heading 4
    </Text>
    <Text
      style={
        [
          {
            "fontSize": 24,
            "fontWeight": "300",
            "lineHeight": 24,
            "textAlign": "left",
          },
          {
            "color": "#60A5FA",
            "paddingBottom": 24,
          },
        ]
      }
    >
      This is a Heading 5
    </Text>
    <Text
      style={
        [
          {
            "fontSize": 20,
            "fontWeight": "200",
            "lineHeight": 20,
            "textAlign": "left",
          },
          {
            "color": "#60A5FA",
            "paddingBottom": 24,
          },
        ]
      }
    >
      This is a Heading 6
    </Text>
    <Text
      style={
        [
          {
            "fontSize": 18,
            "lineHeight": 24,
          },
          {
            "color": "#E8E2D9",
            "paddingBottom": 10,
          },
        ]
      }
    >
      This is body text
    </Text>
  </View>
</RCTScrollView>
`;
